# HPC-1

./: Determinante.cu  Imagen en escala de grises.cu  MULTIPLICACION MATRICES NO CUADRADAS.cu  MULTIPLICACIÓN DE MATRICES.gnumeric  Multiplicacion de matrices.cpp  Plataforma para compilar CUDA  README.md  SUMA DE MATRICES.cu  SUMA DE VECTORES.cu  SUMA MATRICES.gnumeric  SUMA VECTOR.gnumeric  Sobel_CPU.cpp  Sobel_GPU.cpp  Transpuesta.cu  Tutorial Cmake  ayuda.cpp  mauro.txt  multMatrix.cpp  pixeles y vectores  shared_memory.cu  suma matrices  suma vectores
Canny/Opencv/: CMakeLists.txt  canny.cpp  canny.py
Graficas/: MULTIPLICACION MATRICES.gnumeric  SUMA MATRICES.gnumeric  graficas sumaVec.txt  multiplicacion matrices
Grises/: CMakeLists.txt  Escala_de_grises.cu
MPI/: README.md
Multiplicacion de matrices/: README.md  a.out  createMatrixfile.c  global.cu  in1.in  in2.in  mult.cpp  out.out  shared_memory.cu
Multiplicacion de matrices/C++/: mult.cpp  mult.sh  time.txt
Multiplicacion de matrices/CUDA/: README.md  global.cu
Multiplicacion de matrices/OpenMP/: mult.cpp  mult.sh  time.txt
NVIDIA qwiklabs/CUDA Python/: CUDA Python - Click to Open.ipynb  CUDA Python - Click to Open.py  README.md
NVIDIA qwiklabs/Introduction/: Accelerated Computing.ipynb  README.md
OpenMP/: README.md  mult.cpp  omp_hello.sh
Procesamiento de imágenes/: brightness.cpp
Procesamiento de imágenes/Brillo/: CMakeLists.txt  README.md  brightness.cu  brightness.sh
Procesamiento de imágenes/Sobel/: CMakeLists.txt  README.md  Sobel.cu  Sobel.sh  (+4 more)
Suma de vectores/: createVectorFile.c
(+6 files in other folders)
