cmake_minimum_required(VERSION 2.8)
project( Escala_de_grises )
find_package( OpenCV REQUIRED )
find_package( CUDA REQUIRED )
#set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS}; -O3 -arch=sm_52)
cuda_add_executable( Escala_de_grises Escala_de_grises.cu )
target_link_libraries( Escala_de_grises ${OpenCV_LIBS} )
